...
    <string name="logo" translatable="false">Logo</string>

    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <!--Landing Page Bottom Navigation Items-->
    <string name="landing_page_nav_menu_home">Home</string>
    <string name="landing_page_nav_menu_challenges">Challenges</string>
    <string name="landing_page_nav_menu_info">Info</string>
    <string name="landing_page_nav_menu_profile">Profiel</string>
    <!--Login-->
    <string name="login_title">Aanmelden</string>
    <string name="login_welcome">Welkom bij Multinet</string>
    <string name="login_username_required">Gebruikersnaam is verplicht</string>
...
    <string name="update_profile_email_invalid">Ongeldige email</string>
    <string name="updateProfileError">Kon uw gegevens niet bewerken</string>


    <string name="confirm_updated_profile_button">Bevestig</string>
    <!--Challenges-->
    <string name="challenges_title">Challenges</string>
    <!--Info-->
    <string name="info_title">Info</string>

    <!--Network-->
    <string name="dialog_enable_wireless_title">Wifi inschakelen</string>
    <string name="dialog_enable_wireless_continue">Ga naar instellingen</string>
...
    <string name="network_unavailable">Netwerk onbereikbaar</string>
    <string name="login_io_exception">Login mislukt, probeer later nog eens</string>

    <!--Retrofit Error-->
    <string name="generic_error">Er liep iets fout</string>
    <string name="login_invalid">Login ongeldig</string>
    <string name="complete_challenge">Uitdaging voltooien</string>
    <string name="userError">Kon uw details niet ophalen</string>
    <string name="therapistError">Kon uw therapeuten niet ophalen</string>
    <string name="challengeError">Kon uw uitdagingen niet ophalen</string>
    <string name="leaderboardError">Kon uw leaderboard niet ophalen</string>
    <string name="completeChallengeError">Kon de uitdaging niet voltooien</string>

...
