<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityNavHost"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite"
        tools:layout_editor_absoluteX="0dp" />

    <fragment
        android:id="@+id/mainActivityNavHost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/login_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>