...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:visibility="@{challengeViewModel.showChallengeLoadingIndicator() ? View.GONE : View.VISIBLE}"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTabs" >
    </androidx.viewpager2.widget.ViewPager2>

...
